# plist

./: CMakeLists.txt  README.md
src/: main.c  plist.c  plist.h  utils.c  utils.h
